--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,11 +1,19 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "theme_color" : "#000",
+  "background_color" : "#000",
+  "display" : "standalone",
+  "scope" : "/",
+  "start_url" : "/",
+  "short_name" : "Youtube 2.0",
+  "name" : "YouTube 2.0",
+  "description" : "youtube clone",
+
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "maskable.png",
+      "type": "image/png",
+      "sizes": "120x120",
+      "purpose": "any maskable"
     },
     {
       "src": "logo192.png",
@@ -13,13 +21,19 @@
       "sizes": "192x192"
     },
     {
+      "src": "logo256.png",
+      "type": "image/png",
+      "sizes": "256x256"
+    },
+    {
+      "src": "logo384.png",
+      "type": "image/png",
+      "sizes": "384x384"
+    },
+    {
       "src": "logo512.png",
       "type": "image/png",
       "sizes": "512x512"
     }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  ]
 }
